--- a/sub.html
+++ b/sub.html
@@ -7,6 +7,21 @@
     <title>Document</title>
   </head>
   <body>
-    <script src="student.js"></script>
+    <div id="wrapper">
+      <form action="#" id="form"></form>
+    </div>
+    <table id="table-display">
+      <thead>
+        <tr>
+          <th scope="col">#</th>
+          <th scope="col">Name</th>
+          <th scope="col">Age</th>
+          <th scope="col">Grade</th>
+          <th scope="col">Courses</th>
+        </tr>
+      </thead>
+      <tbody id="list"></tbody>
+    </table>
+    <script src="./student.js"></script>
   </body>
 </html>
