--- a/sub.html
+++ b/sub.html
@@ -9,6 +9,8 @@
   <body>
     <div id="wrapper">
       <form action="#" id="form"></form>
+      <input type="search" id="seach" /><button id="sear">Search</button>
+      <p id="momo"></p>
     </div>
     <table id="table-display">
       <thead>
@@ -21,6 +23,18 @@
         </tr>
       </thead>
       <tbody id="list"></tbody>
+    </table>
+    <table id="search-table">
+      <thead>
+        <tr>
+          <th scope="col">#</th>
+          <th scope="col">Name</th>
+          <th scope="col">Age</th>
+          <th scope="col">Grade</th>
+          <th scope="col">Courses</th>
+        </tr>
+      </thead>
+      <tbody id="search-body"></tbody>
     </table>
     <script src="./student.js"></script>
   </body>
